// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MoodTrendChart snapshots > renders 0 entries snapshot 1`] = `
<div>
  <section
    class="mtc-card"
    data-testid="mood-trend-chart-empty"
  >
    <div
      class="mtc-header"
    >
      <h3
        class="mtc-title"
      >
        Mood Trend
      </h3>
    </div>
    <div
      class="mtc-empty-state"
    >
      <svg
        class="mtc-empty-icon"
        fill="none"
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <path
          d="M8 28L16 18L24 24L40 8"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <circle
          cx="16"
          cy="18"
          fill="currentColor"
          r="2"
        />
        <circle
          cx="24"
          cy="24"
          fill="currentColor"
          r="2"
        />
        <circle
          cx="40"
          cy="8"
          fill="currentColor"
          r="2"
        />
      </svg>
      <p
        class="mtc-empty"
      >
        No mood entries yet. Start journaling to see your emotional trends.
      </p>
    </div>
  </section>
</div>
`;

exports[`MoodTrendChart snapshots > renders 1 entry snapshot 1`] = `
<div>
  <section
    class="mtc-card"
    data-testid="mood-trend-chart"
  >
    <div
      class="mtc-header"
    >
      <div>
        <h3
          class="mtc-title"
        >
          Mood Trend
        </h3>
        <p
          class="mtc-subtitle"
        >
          Track your emotional patterns over time
        </p>
      </div>
      <div
        class="mtc-controls"
      >
        <div
          class="mtc-legend"
        >
          <div
            class="mtc-legend-item"
          >
            <div
              class="mtc-legend-dot"
              style="background-color: rgb(98, 168, 142);"
            />
            <span>
              Positive
            </span>
          </div>
          <div
            class="mtc-legend-item"
          >
            <div
              class="mtc-legend-dot"
              style="background-color: rgb(108, 143, 198);"
            />
            <span>
              Neutral
            </span>
          </div>
          <div
            class="mtc-legend-item"
          >
            <div
              class="mtc-legend-dot"
              style="background-color: rgb(232, 114, 107);"
            />
            <span>
              Negative
            </span>
          </div>
        </div>
        <div
          class="mtc-chart-toggle"
        >
          <button
            aria-label="Mountain chart"
            class="mtc-toggle-btn mtc-toggle-btn--active"
            title="Mountain Chart"
          >
            ⛰
          </button>
          <button
            aria-label="Bar chart"
            class="mtc-toggle-btn "
            title="Bar Chart"
          >
            📊
          </button>
        </div>
      </div>
    </div>
    <div
      class="mtc-chartWrap"
    >
      <svg
        aria-label="Mood trend chart"
        class="mtc-svg"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        viewBox="0 0 800 380"
      >
        <defs>
          <clippath
            id="mtc-plot-clip"
          >
            <rect
              height="280"
              width="668"
              x="108"
              y="40"
            />
          </clippath>
          <lineargradient
            id="mtc-positive-gradient"
            x1="0%"
            x2="0%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="#62a88e"
              stop-opacity="0.5"
            />
            <stop
              offset="100%"
              stop-color="#62a88e"
              stop-opacity="0.02"
            />
          </lineargradient>
          <lineargradient
            id="mtc-negative-gradient"
            x1="0%"
            x2="0%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="#e8726b"
              stop-opacity="0.5"
            />
            <stop
              offset="100%"
              stop-color="#e8726b"
              stop-opacity="0.02"
            />
          </lineargradient>
          <lineargradient
            id="mtc-neutral-gradient"
            x1="0%"
            x2="0%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="#6c8fc6"
              stop-opacity="0.5"
            />
            <stop
              offset="100%"
              stop-color="#6c8fc6"
              stop-opacity="0.02"
            />
          </lineargradient>
        </defs>
        <g
          class="mtc-grid"
        >
          <line
            class="mtc-gridLine"
            x1="108"
            x2="776"
            y1="286.4"
            y2="286.4"
          />
          <line
            class="mtc-gridLine"
            x1="108"
            x2="776"
            y1="180"
            y2="180"
          />
          <line
            class="mtc-gridLine"
            x1="108"
            x2="776"
            y1="73.6"
            y2="73.6"
          />
        </g>
        <line
          class="mtc-axis"
          x1="108"
          x2="108"
          y1="40"
          y2="320"
        />
        <line
          class="mtc-axis"
          x1="108"
          x2="776"
          y1="320"
          y2="320"
        />
        <text
          class="mtc-axisLabel"
          fill="#e8726b"
          text-anchor="end"
          x="90"
          y="290.4"
        >
          Negative
        </text>
        <text
          class="mtc-axisLabel"
          fill="#6c8fc6"
          text-anchor="end"
          x="90"
          y="184"
        >
          Neutral
        </text>
        <text
          class="mtc-axisLabel"
          fill="#62a88e"
          text-anchor="end"
          x="90"
          y="77.6"
        >
          Positive
        </text>
        <g
          clip-path="url(#mtc-plot-clip)"
        >
          <path
            class="mtc-area"
            d="M 108 320 L 442 73.6  L 776 320 Z"
            fill="url(#mtc-neutral-gradient)"
          />
          <path
            class="mtc-line mtc-line--mountain"
            d="M 442 73.6"
          />
          <circle
            class="mtc-point mtc-point--positive "
            cx="442"
            cy="73.6"
            data-testid="mood-point-0"
            fill="#62a88e"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
        </g>
        <g
          class="mtc-xLabels"
        >
          <text
            class="mtc-dateLabel"
            text-anchor="middle"
            x="442"
            y="348"
          >
            Apr 10
          </text>
        </g>
      </svg>
    </div>
  </section>
</div>
`;

exports[`MoodTrendChart snapshots > renders 10 mixed entries and tooltip snapshot 1`] = `
<div>
  <section
    class="mtc-card"
    data-testid="mood-trend-chart"
  >
    <div
      class="mtc-header"
    >
      <div>
        <h3
          class="mtc-title"
        >
          Mood Trend
        </h3>
        <p
          class="mtc-subtitle"
        >
          Track your emotional patterns over time
        </p>
      </div>
      <div
        class="mtc-controls"
      >
        <div
          class="mtc-legend"
        >
          <div
            class="mtc-legend-item"
          >
            <div
              class="mtc-legend-dot"
              style="background-color: rgb(98, 168, 142);"
            />
            <span>
              Positive
            </span>
          </div>
          <div
            class="mtc-legend-item"
          >
            <div
              class="mtc-legend-dot"
              style="background-color: rgb(108, 143, 198);"
            />
            <span>
              Neutral
            </span>
          </div>
          <div
            class="mtc-legend-item"
          >
            <div
              class="mtc-legend-dot"
              style="background-color: rgb(232, 114, 107);"
            />
            <span>
              Negative
            </span>
          </div>
        </div>
        <div
          class="mtc-chart-toggle"
        >
          <button
            aria-label="Mountain chart"
            class="mtc-toggle-btn mtc-toggle-btn--active"
            title="Mountain Chart"
          >
            ⛰
          </button>
          <button
            aria-label="Bar chart"
            class="mtc-toggle-btn "
            title="Bar Chart"
          >
            📊
          </button>
        </div>
      </div>
    </div>
    <div
      class="mtc-chartWrap"
    >
      <svg
        aria-label="Mood trend chart"
        class="mtc-svg"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        viewBox="0 0 800 380"
      >
        <defs>
          <clippath
            id="mtc-plot-clip"
          >
            <rect
              height="280"
              width="668"
              x="108"
              y="40"
            />
          </clippath>
          <lineargradient
            id="mtc-positive-gradient"
            x1="0%"
            x2="0%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="#62a88e"
              stop-opacity="0.5"
            />
            <stop
              offset="100%"
              stop-color="#62a88e"
              stop-opacity="0.02"
            />
          </lineargradient>
          <lineargradient
            id="mtc-negative-gradient"
            x1="0%"
            x2="0%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="#e8726b"
              stop-opacity="0.5"
            />
            <stop
              offset="100%"
              stop-color="#e8726b"
              stop-opacity="0.02"
            />
          </lineargradient>
          <lineargradient
            id="mtc-neutral-gradient"
            x1="0%"
            x2="0%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="#6c8fc6"
              stop-opacity="0.5"
            />
            <stop
              offset="100%"
              stop-color="#6c8fc6"
              stop-opacity="0.02"
            />
          </lineargradient>
        </defs>
        <g
          class="mtc-grid"
        >
          <line
            class="mtc-gridLine"
            x1="108"
            x2="776"
            y1="286.4"
            y2="286.4"
          />
          <line
            class="mtc-gridLine"
            x1="108"
            x2="776"
            y1="180"
            y2="180"
          />
          <line
            class="mtc-gridLine"
            x1="108"
            x2="776"
            y1="73.6"
            y2="73.6"
          />
        </g>
        <line
          class="mtc-axis"
          x1="108"
          x2="108"
          y1="40"
          y2="320"
        />
        <line
          class="mtc-axis"
          x1="108"
          x2="776"
          y1="320"
          y2="320"
        />
        <text
          class="mtc-axisLabel"
          fill="#e8726b"
          text-anchor="end"
          x="90"
          y="290.4"
        >
          Negative
        </text>
        <text
          class="mtc-axisLabel"
          fill="#6c8fc6"
          text-anchor="end"
          x="90"
          y="184"
        >
          Neutral
        </text>
        <text
          class="mtc-axisLabel"
          fill="#62a88e"
          text-anchor="end"
          x="90"
          y="77.6"
        >
          Positive
        </text>
        <g
          clip-path="url(#mtc-plot-clip)"
        >
          <path
            class="mtc-area"
            d="M 108 320 L 108 73.6 C 132.74074074074073 73.6 157.4814814814815 286.4 182.22222222222223 286.4 C 206.96296296296296 286.4 231.70370370370372 180 256.44444444444446 180 C 281.18518518518516 180 305.9259259259259 73.6 330.66666666666663 73.6 C 355.4074074074074 73.6 380.14814814814815 286.4 404.8888888888889 286.4 C 429.6296296296296 286.4 454.3703703703704 180 479.1111111111111 180 C 503.8518518518518 180 528.5925925925925 73.6 553.3333333333333 73.6 C 578.074074074074 73.6 602.8148148148148 286.4 627.5555555555555 286.4 C 652.2962962962963 286.4 677.0370370370371 180 701.7777777777778 180 C 726.5185185185186 180 751.2592592592592 73.6 776 73.6 L 776 320 Z"
            fill="url(#mtc-neutral-gradient)"
          />
          <path
            class="mtc-line mtc-line--mountain"
            d="M 108 73.6 C 132.74074074074073 73.6 157.4814814814815 286.4 182.22222222222223 286.4 C 206.96296296296296 286.4 231.70370370370372 180 256.44444444444446 180 C 281.18518518518516 180 305.9259259259259 73.6 330.66666666666663 73.6 C 355.4074074074074 73.6 380.14814814814815 286.4 404.8888888888889 286.4 C 429.6296296296296 286.4 454.3703703703704 180 479.1111111111111 180 C 503.8518518518518 180 528.5925925925925 73.6 553.3333333333333 73.6 C 578.074074074074 73.6 602.8148148148148 286.4 627.5555555555555 286.4 C 652.2962962962963 286.4 677.0370370370371 180 701.7777777777778 180 C 726.5185185185186 180 751.2592592592592 73.6 776 73.6"
          />
          <circle
            class="mtc-point mtc-point--positive "
            cx="108"
            cy="73.6"
            data-testid="mood-point-0"
            fill="#62a88e"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--negative "
            cx="182.22222222222223"
            cy="286.4"
            data-testid="mood-point-1"
            fill="#e8726b"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--neutral "
            cx="256.44444444444446"
            cy="180"
            data-testid="mood-point-2"
            fill="#6c8fc6"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--positive "
            cx="330.66666666666663"
            cy="73.6"
            data-testid="mood-point-3"
            fill="#62a88e"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--negative mtc-point--active"
            cx="404.8888888888889"
            cy="286.4"
            data-testid="mood-point-4"
            fill="#e8726b"
            r="7"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--neutral "
            cx="479.1111111111111"
            cy="180"
            data-testid="mood-point-5"
            fill="#6c8fc6"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--positive "
            cx="553.3333333333333"
            cy="73.6"
            data-testid="mood-point-6"
            fill="#62a88e"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--negative "
            cx="627.5555555555555"
            cy="286.4"
            data-testid="mood-point-7"
            fill="#e8726b"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--neutral "
            cx="701.7777777777778"
            cy="180"
            data-testid="mood-point-8"
            fill="#6c8fc6"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
          <circle
            class="mtc-point mtc-point--positive "
            cx="776"
            cy="73.6"
            data-testid="mood-point-9"
            fill="#62a88e"
            r="5"
            stroke="white"
            stroke-width="2.5"
            style="cursor: pointer; transition: r 200ms ease, filter 200ms ease;"
          />
        </g>
        <g
          class="mtc-xLabels"
        >
          <text
            class="mtc-dateLabel"
            text-anchor="middle"
            x="108"
            y="348"
          >
            Apr 9
          </text>
          <text
            class="mtc-dateLabel"
            text-anchor="middle"
            x="330.66666666666663"
            y="348"
          >
            Apr 12
          </text>
          <text
            class="mtc-dateLabel"
            text-anchor="middle"
            x="553.3333333333333"
            y="348"
          >
            Apr 15
          </text>
          <text
            class="mtc-dateLabel"
            text-anchor="middle"
            x="776"
            y="348"
          >
            Apr 18
          </text>
        </g>
      </svg>
      <div
        class="mtc-tooltip"
        data-testid="mood-tooltip"
        style="left: 50.611111111111114%;"
      >
        <div
          class="mtc-tooltip__inner"
        >
          <div
            class="mtc-tooltip__sentiment-badge"
            style="background-color: rgb(232, 114, 107);"
          >
            Negative
          </div>
          <div
            class="mtc-tooltip__row"
          >
            <span
              class="mtc-tooltip__label"
            >
              Date:
            </span>
            <span
              class="mtc-tooltip__value"
            >
              Apr 13, 2026, 08:00 PM
            </span>
          </div>
          <div
            class="mtc-tooltip__row"
          >
            <span
              class="mtc-tooltip__label"
            >
              Confidence:
            </span>
            <span
              class="mtc-tooltip__value"
            >
              61%
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
